# crux

./: .gitignore  README.md  README_scale.md  bm25-rag-example.py  pyproject.toml  self_request.py  self_request_back.py  server_api.sh  test_vllm_api.sh  test_vllm_launcher.sh  vllm_api.py  vllm_launcher.py
augmentation/: create_corpus.py  create_ranking_data.py  gen_passages.py  gen_questions.py  gen_ratings.py  gen_topics.py  prompts.py  utils.py
configs/: crux-default-70b.yaml  crux-default-8b.yaml  crux-testing-70b.yaml  crux-testing-8b.yaml  default_config.yaml  mds-decontextualize.llama3-70b.yaml  mds-decontextualize.llama3-8b.yaml  scale.litellm.yaml  scale.llama3-70b.yaml
crux-biogen/: get_biogen_run.py  get_biogen_run.sh  get_subset_biogen_corpus.py
crux-neuclir/: transform_human_nugget_to_crux.py
crux-ragtime/: neuclir_eval.py  neuclir_ir_eval.py  run_crux_reranker_eval.py  run_rac_nugget_eval.py
crux-researchy/: merge_ratings.py  merge_ratings_qrel.py  rerank-candidates.py  researchy-corpus.py  researchy-run.py
crux.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/: utils.py
evaluation/: evaluate_knowledge.sh  figure4.sh  table4.sh
judgements/: test_oracle-report_judgements.jsonl  test_zs-llmqfsum_judgements.jsonl  test_zs-llmrg_judgements.jsonl  testb_bartsum_judgements.jsonl  testb_oracle-report_judgements.jsonl  testb_recomp_judgements.jsonl  testb_zs-llmqfsum_judgements.jsonl  testb_zs-llmrg_judgements.jsonl  testb_zs-llmsum_judgements.jsonl
legacy/: run-vllm-lumi8.sh  test_vllm_launcher.sh  test_vllm_launcher.sh~  testing.sh  (+1 more)
(+87 files in other folders)
